# self-evolving-agent-platform

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  GITHUB_SETUP.md  GPU_DEPLOYMENT.md  Makefile  PHASE1_COMPLETION.md  PROJECT_ROADMAP.md  README.md  SECURITY_AUDIT.md  docker-compose.cloud.yml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  scaleway-deployment.yml
.github/workflows/: ci.yml  gpu-deploy.yml
backend/: Dockerfile  Dockerfile.gpu  requirements.gpu.txt  requirements.txt  sandbox_integration.py  strands_autonomous_agent.py
backend/app/: main.py
backend/app/api/: agents.py  tasks.py
backend/app/core/: config.py
backend/app/models/: agent.py  task.py
cloud/: aws-gpu.yml
docs/: api.md  architecture.md  deployment.md
frontend/: .chainlit  Dockerfile  Dockerfile.enhanced  Dockerfile.sandbox  Dockerfile.strands  Dockerfile.voice  ENHANCED_UI_FEATURES.md  agent_sandbox.py  app.py  enhanced_app.py  enhanced_requirements.txt  requirements.txt  sandbox_requirements.txt  strands_agent_ui.py  voice_chief_of_staff.py  voice_requirements.txt
frontend/public/: custom.css  custom.js
phase2/: DEVELOPMENT_PLAN.md  README.md  SCALEWAY_INTEGRATION.md
phase2/backend/communication/: __init__.py  message_handler.py  protocol.py  redis_queue.py
phase2/backend/database/: migration_strategy.md  schema.sql
phase2/backend/workflow/: __init__.py
scripts/: deploy-local.sh  setup.sh
